fix: login page logo align center

--- a/src/style/loginpage.styl
+++ b/src/style/loginpage.styl
@@ -41,7 +41,9 @@
           color color-primary
           text-decoration: none
     .{prefix}-login-page-logo
-      max-width: 100%
+      text-align: center
+      img
+        max-width: 100%
       + .{prefix}-login-page-form-slot
         margin-top: 30px
     .{prefix}-login-page-logo-text
